заглушки под запросы, мапперы для существующего функционала, изменение спеки
